swiper on detailed page

--- a/404.html
+++ b/404.html
@@ -9,6 +9,7 @@
     <title>e-Commerce app</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/angular-material.min.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
 </head>
 
 <body>
@@ -27,6 +28,8 @@
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="js/services.js"></script>
     <script type="text/javascript" src="js/controller.js"></script>
+    <script type="text/javascript" src="js/swiper.min.js"></script>
+    <script type="text/javascript" src="js/angular-swiper.js"></script>
     <script type="text/javascript">
     function downloadAtOnload() {
         var head = document.getElementsByTagName('head')[0];
