stanza web page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <md-content ng-controller="parentController" infinite-scroll="myPagingFunction()">
+    <md-content>
         <!-- <div ng-controller="IndexController" ng-include="'templates/header.html'"></div> -->
         <div ui-view="main-view">
         </div>
